Fix contrast when hovering on logo

--- a/src/app/static/src/scss/partials/header.scss
+++ b/src/app/static/src/scss/partials/header.scss
@@ -24,8 +24,12 @@
   }
 }
 
-.navbar-brand {
+a.navbar-brand {
   font-size: 1rem !important;
+
+  &:hover {
+    color: $theme-mint !important;
+  }
 }
 
 .navbar-header {
@@ -56,4 +60,8 @@
 
 .dropdown-toggle {
   cursor: pointer;
+}
+
+a.text-white:hover {
+
 }
